[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/White_circle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://textures/tile1.png" type="Texture" id=5]
[ext_resource path="res://textures/start.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Physics.gd" type="Script" id=8]
[ext_resource path="res://Scripts/FPS.gd" type="Script" id=9]
[ext_resource path="res://Scripts/TPS.gd" type="Script" id=10]

[node name="Main scene" type="Node2D"]
script = ExtResource( 4 )

[node name="Grid" type="TextureRect" parent="."]
margin_left = -4097.0
margin_top = -4095.0
margin_right = 4095.0
margin_bottom = 4097.0
texture = ExtResource( 5 )
stretch_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="GPoints" type="Node" parent="."]
script = ExtResource( 8 )

[node name="MassCentre" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="Button" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
margin_right = 76.0
margin_bottom = 110.0
icon = ExtResource( 6 )
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 80.0
margin_right = 204.0
margin_bottom = 110.0

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 24.0
pressed = true
text = "Grid"

[node name="CheckBox2" type="CheckBox" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 124.0
margin_bottom = 52.0
pressed = true
text = "Centre of mass"

[node name="CheckBox3" type="CheckBox" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 124.0
margin_bottom = 80.0
pressed = true
text = "Trail"

[node name="CheckBox4" type="CheckBox" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 124.0
margin_bottom = 108.0
text = "Follow centre"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 208.0
margin_right = 319.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer2"]
margin_right = 111.0
margin_bottom = 31.0
text = "Simulation speed
(1/16x - 16x)"

[node name="HSlider" type="HSlider" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer2"]
margin_top = 35.0
margin_right = 111.0
margin_bottom = 51.0
max_value = 10.0
page = 1.0
value = 5.0
tick_count = 11

[node name="Label2" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer2"]
margin_top = 55.0
margin_right = 111.0
margin_bottom = 86.0
text = "Gravity
 (1/16x - 16x)"

[node name="HSlider2" type="HSlider" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer2"]
margin_top = 90.0
margin_right = 111.0
margin_bottom = 106.0
max_value = 10.0
value = 5.0
tick_count = 11

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 323.0
margin_right = 327.0
margin_bottom = 110.0

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 331.0
margin_right = 541.0
margin_bottom = 110.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3"]
margin_right = 210.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_top = 5.0
margin_right = 43.0
margin_bottom = 19.0
text = "Object"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 47.0
margin_right = 105.0
margin_bottom = 24.0
align = 1
max_length = 3
placeholder_alpha = 0.316

[node name="AddGP" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 109.0
margin_right = 129.0
margin_bottom = 24.0
text = "+"

[node name="RemoveGP" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 133.0
margin_right = 150.0
margin_bottom = 24.0
text = "-"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3"]
margin_top = 28.0
margin_right = 210.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "Mass"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 37.0
margin_right = 95.0
margin_bottom = 24.0
align = 1
max_length = 5
placeholder_alpha = 0.316

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3"]
margin_top = 56.0
margin_right = 210.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer3"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 19.0
text = "Position  x:"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer3"]
margin_left = 75.0
margin_right = 133.0
margin_bottom = 24.0
align = 1
max_length = 5
placeholder_alpha = 0.316

[node name="Label2" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer3"]
margin_left = 137.0
margin_top = 5.0
margin_right = 148.0
margin_bottom = 19.0
text = "y:"

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer3"]
margin_left = 152.0
margin_right = 210.0
margin_bottom = 24.0
align = 1
max_length = 5
placeholder_alpha = 0.316

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3"]
margin_top = 84.0
margin_right = 210.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer4"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "Velocity  x:"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer4"]
margin_left = 74.0
margin_right = 132.0
margin_bottom = 24.0
align = 1
max_length = 5
placeholder_alpha = 0.316

[node name="Label2" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer4"]
margin_left = 136.0
margin_top = 5.0
margin_right = 147.0
margin_bottom = 19.0
text = "y:"

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer4"]
margin_left = 151.0
margin_right = 209.0
margin_bottom = 24.0
align = 1
max_length = 5
placeholder_alpha = 0.316

[node name="VSeparator2" type="VSeparator" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 545.0
margin_right = 549.0
margin_bottom = 110.0

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 553.0
margin_right = 654.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer4"]
margin_right = 101.0
margin_bottom = 14.0
text = "Load presets:"

[node name="Button" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer4"]
margin_top = 18.0
margin_right = 101.0
margin_bottom = 38.0
text = "Figure 8 3b"

[node name="Button2" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer4"]
margin_top = 42.0
margin_right = 101.0
margin_bottom = 62.0
text = "Circular 2b"

[node name="Button3" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer4"]
margin_top = 66.0
margin_right = 101.0
margin_bottom = 86.0
text = "Elliptical 2b"

[node name="Button4" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer4"]
margin_top = 90.0
margin_right = 101.0
margin_bottom = 110.0
text = "Symmetric 2b"

[node name="VBoxContainer5" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 658.0
margin_right = 759.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer5"]
margin_right = 101.0
margin_bottom = 14.0

[node name="Button" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer5"]
margin_top = 18.0
margin_right = 101.0
margin_bottom = 38.0
text = "Spiral 2b"

[node name="Button2" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer5"]
margin_top = 42.0
margin_right = 101.0
margin_bottom = 62.0
text = "Knots 2b"

[node name="Button3" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer5"]
margin_top = 66.0
margin_right = 101.0
margin_bottom = 86.0
text = "Strange 2b"

[node name="Button4" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer5"]
margin_top = 90.0
margin_right = 101.0
margin_bottom = 110.0
text = "Symmetric 3b"

[node name="VBoxContainer6" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 763.0
margin_right = 894.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer6"]
margin_right = 131.0
margin_bottom = 14.0

[node name="Button" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer6"]
margin_top = 18.0
margin_right = 131.0
margin_bottom = 38.0
text = "Twin star 3b"

[node name="Button2" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer6"]
margin_top = 42.0
margin_right = 131.0
margin_bottom = 62.0
text = "Sun Earth Moon 3b"

[node name="FPS" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -87.0
margin_top = -30.0
margin_right = -15.0
margin_bottom = -16.0
text = "FPS:"
script = ExtResource( 9 )

[node name="TPS" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -87.0
margin_top = -16.0
margin_right = -15.0
margin_bottom = -2.0
text = "TPS:"
script = ExtResource( 10 )

[connection signal="mouse_entered" from="Grid" to="Camera2D" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_entered" from="CanvasLayer/Panel" to="Camera2D" method="_on_Panel_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/Button" to="CanvasLayer/Panel/HBoxContainer/Button" method="_on_Button_pressed"]
[connection signal="toggled" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_Grid_toggled"]
[connection signal="toggled" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_CentreOfMass_toggled"]
[connection signal="toggled" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer/CheckBox3" to="." method="_on_Trail_toggled"]
[connection signal="toggled" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer/CheckBox4" to="Camera2D" method="_on_CheckBox4_toggled"]
[connection signal="value_changed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer2/HSlider" to="." method="_on_SimSpeed_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer2/HSlider2" to="." method="_on_Gravity_value_changed"]
[connection signal="text_entered" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer2/LineEdit" to="." method="_on_Object_text_entered"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer2/AddGP" to="." method="_on_AddGP_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer2/RemoveGP" to="." method="_on_RemoveGP_pressed"]
[connection signal="text_entered" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer/LineEdit" to="." method="_on_mass_text_entered"]
[connection signal="text_entered" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer3/LineEdit" to="." method="_on_posX_text_entered"]
[connection signal="text_entered" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer3/LineEdit2" to="." method="_on_posY_text_entered"]
[connection signal="text_entered" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer4/LineEdit" to="." method="_on_velX_text_entered"]
[connection signal="text_entered" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer3/HBoxContainer4/LineEdit2" to="." method="_on_velY_text_entered"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer4/Button" to="." method="set_starting_settings" binds= [ "8figure" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer4/Button2" to="." method="set_starting_settings" binds= [ "2bcircular" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer4/Button3" to="." method="set_starting_settings" binds= [ "2belliptic" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer4/Button4" to="." method="set_starting_settings" binds= [ "2bsymmetric" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer5/Button" to="." method="set_starting_settings" binds= [ "2bspiral" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer5/Button2" to="." method="set_starting_settings" binds= [ "2bknot" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer5/Button3" to="." method="set_starting_settings" binds= [ "2bstrange" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer5/Button4" to="." method="set_starting_settings" binds= [ "3bsymmetric" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer6/Button" to="." method="set_starting_settings" binds= [ "3btwinstar" ]]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer6/Button2" to="." method="set_starting_settings" binds= [ "3bSEM" ]]
